--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,10 +3,18 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<h2>Log In</h2>
-<form method="post">
-  {% csrf_token %}
-  {{ form }}
-  <button type="submit">Log In</button>
-</form>
+<div class="d-flex justify-content-center align-items-center" style="height: 75vh;">
+    <div class="col-md-6 col-lg-4">
+        <h2 class="text-center my-4">Log In</h2>
+        <form method="post">
+            {% csrf_token %}
+            <div class="form-group">
+                {{ form.as_p }}
+            </div>
+            <div class="text-center">
+                <button type="submit" class="btn btn-primary">Log In</button>
+            </div>
+        </form>
+    </div>
+</div>
 {% endblock %}
