--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -3,10 +3,12 @@
 {% block title %}Sign Up{% endblock %}
 
 {% block content %}
-<h2>Sign up</h2>
+<h2 class="my-4">Sign Up</h2>
 <form method="post">
   {% csrf_token %}
-  {{ form }}
-  <button type="submit">Sign Up</button>
+  <div class="form-group">
+    {{ form.as_p }}
+  </div>
+  <button type="submit" class="btn btn-primary">Sign Up</button>
 </form>
 {% endblock %}
