--- a/templates/task_delete.html
+++ b/templates/task_delete.html
@@ -1,16 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Delete Task</title>
-</head>
-<body>
-    <h1>Delete Task</h1>
-    <p>Are you sure you want to delete the task "{{ task.title }}"?</p>
-    <form method="post">
-        {% csrf_token %}
-        <button type="submit">Yes, delete</button>
-    </form>
-    <a href="{% url 'task_list' %}">No, go back</a>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+<h1 class="my-4">Delete Task</h1>
+<p>Are you sure you want to delete the task "{{ task.title }}"?</p>
+<form method="post">
+    {% csrf_token %}
+    <button type="submit" class="btn btn-danger">Yes, delete</button>
+</form>
+<a href="{% url 'task_list' %}" class="btn btn-secondary mt-3">No, go back</a>
+{% endblock %}
